# comfyui-labs-google

./: README.md  __init__.py  comfyui_imagefx.py  comfyui_whisk.py  googel.json  pyproject.toml  requirements.txt
workflows/: ComfyUI-ImageFx.json  ComfyUI-Whisk&ImageFx.json  ComfyUI-Whisk.json
