[project]
name = "labs-google"
description = "NODES: ComfyUI-ImageFx, ComfyUI-Whisk"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests", "pillow", "chardet"]

[project.urls]
Repository = "https://github.com/ainewsto/comfyui-labs-google"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ainewsto"
DisplayName = "comfyui-labs-google"
Icon = ""
